# notifications

MultiChannelNotifier/: pyproject.toml
MultiChannelNotifier/attached_assets/: Pasted-You-are-tasked-with-designing-and-implementing-a-multi-channel-notification-platform-called-Techrar--1748773351658.txt
MultiChannelNotifier/backend/: manage.py  setup_templates.py
MultiChannelNotifier/backend/accounts/: models.py  serializers.py  urls.py  views.py
MultiChannelNotifier/backend/accounts/migrations/: 0001_initial.py
MultiChannelNotifier/backend/campaigns/: models.py  serializers.py  tasks.py  urls.py  views.py
MultiChannelNotifier/backend/campaigns/migrations/: 0001_initial.py
MultiChannelNotifier/backend/common/: middleware.py  permissions.py  throttling.py
MultiChannelNotifier/backend/notifications/: models.py  routing.py  serializers.py  tasks.py  urls.py  utils.py  views.py
MultiChannelNotifier/backend/notifications/migrations/: 0001_initial.py
MultiChannelNotifier/backend/notifications/providers/: base.py  email.py  push.py  sms.py  whatsapp.py
MultiChannelNotifier/backend/recipients/: models.py  serializers.py  tasks.py  urls.py  views.py
MultiChannelNotifier/backend/techrar/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
MultiChannelNotifier/backend/templates/: models.py  serializers.py  urls.py  views.py
MultiChannelNotifier/frontend/src/: index.html  styles.css
MultiChannelNotifier/frontend/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.ts  app.module.ts
(+8 files in other folders)
